Modified templates to display data from database add more views2

--- a/mysite/gr_chk/new_base.html
+++ b/mysite/gr_chk/new_base.html
@@ -12,7 +12,7 @@
         <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
     </head>
-
+    
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="/">SSB</a>
@@ -58,7 +58,7 @@
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="/gr_chk">Gr Check Home</a>
-                                    <a class="nav-link" href="/gr_chk/new/">เพิ่มสัญญา</a>
+                                    <a class="nav-link" href="layout-static.html">เพิ่มสัญญา</a>
                                     <a class="nav-link" href="layout-sidenav-light.html">Upload Boq</a>
                                 </nav>
                             </div>
@@ -93,24 +93,14 @@
                                     </div>
                                 </nav>
                             </div>
-
-                            <div class="sb-sidenav-menu-heading">Link</div>
-
-                            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLinks" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-sidenav-menu-heading">Addons</div>
+                            <a class="nav-link" href="charts.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Power BI
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                Charts
                             </a>
-                            <div class="collapse" id="collapseLinks" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="/gr_chk">น้ำขาย/คาดการณ์</a>
-                                    <a class="nav-link" href="/gr_chk/new/">งบลงทุน</a>
-                                </nav>
-                            </div>
-
                             <a class="nav-link" href="tables.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                รายงานประจำเดือน
+                                Tables
                             </a>
                         </div>
                     </div>
